@@ -45,6 +45,10 @@ from beancount.reports import context
 DEFAULT_VIEW_REDIRECT = 'balsheet'
 
 
+# The protocol to use for file links.
+FILELINK_PROTOCOL = 'beancount://{filename}?lineno={lineno}'
+
+
 class HTMLFormatter(html_formatter.HTMLFormatter):
     """A formatter object that can be used to render accounts links.
 
@@ -381,11 +385,18 @@ def context_(ehash=None):
         printer.print_entries(matching_entries, dcontext, file=oss)
 
     else:
+        entry = matching_entries[0]
+
+        # Render the filelinks.
+        if FILELINK_PROTOCOL:
+            meta = entry.meta
+            uri = FILELINK_PROTOCOL.format(filename=meta.get('filename'),
+                                           lineno=meta.get('lineno'))
+            oss.write('<div class="filelink"><a href="{}">{}</a></div>'.format(uri, 'Open'))
+
+        # Render the context.
         oss.write("<pre>\n")
-        for entry in matching_entries:
-            oss.write(context.render_file_context(
-                app.entries, app.options,
-                entry.meta["filename"], entry.meta["lineno"]))
+        oss.write(context.render_entry_context(app.entries, app.options, entry))
         oss.write("</pre>\n")
 
     return render_global(
